--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,26 @@
 @tailwind components;
 @tailwind utilities;
 
+.crossed-circle::before,
+.crossed-circle::after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 2px; /* X线条的宽度 */
+  height: 96%; /* X线条的长度 */
+  background-color: gray; /* X线条的颜色 */
+}
+
+.crossed-circle::before {
+  transform: translate(-50%, -50%) rotate(45deg);
+}
+
+.crossed-circle::after {
+  transform: translate(-50%, -50%) rotate(-45deg);
+}
+
+
 /* :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
