--- a/src/components/circle.css
+++ b/src/components/circle.css
@@ -1,26 +1,39 @@
 .circle {
     position: relative;
-    width: 200px;
-    height: 200px;
+    width: 180px;
+    height: 180px;
     border-radius: 50%;
     margin: 50px auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+}
+
+.sector-odd, .sector-even {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    clip-path: polygon(50% 50%, 0 0, 0 50%);
+    border-radius: 50%;
+    transition: transform 0.2s ease, filter 0.2s ease;
+    box-shadow: 0 2px 5px rgba(196, 196, 196, 0.669) inset;
 }
 
 .sector-odd {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    clip-path:polygon(50% 50%, 0 0, 0 50%);      
-    background-color: grey;
-    border-radius: 50%;
+    background-image: linear-gradient(grey, white);
 }
 
 .sector-even {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    clip-path:polygon(50% 50%, 0 0, 0 50%);   
-    background-color: rgb(59, 59, 59);
-    border-radius: 50%;
+    background-image: linear-gradient(rgb(59, 59, 59), rgb(85, 85, 85));
 }
 
+.sector-odd:hover, .sector-even:hover {
+    filter: brightness(1.1);
+}
+
+.sector-odd:active, .sector-even:active {
+    /* 缩小元素尺寸给予"按下去"的感觉 */
+    transform: scale(0.5);
+    box-shadow: 0 2px 5px rgba(112, 112, 112, 0.2) inset;
+}
